nixidy/generated/prod/argo/HTTPRoute-argo.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argo
  namespace: cicd
spec:
  hostnames:
    - argocd.trdos.me
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: argod-argocd-server
          port: 80
