nixidy/generated/prod/argo/HTTPRoute-argod-argocd-server.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/instance: argod
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: argocd-server
    app.kubernetes.io/part-of: argocd
  name: argod-argocd-server
  namespace: cicd
spec:
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: argod-argocd-server
          port: 443
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
